// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render form is closed 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FeedbackModal
    closeForm={[Function]}
    feedbackModalOpen={false}
    isFeedback={false}
    isHelpOut={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Transition
          appear={false}
          enter={true}
          exit={true}
          in={false}
          mountOnEnter={false}
          onEnter={[Function]}
          onEntered={[Function]}
          onEntering={[Function]}
          onExit={[Function]}
          onExited={[Function]}
          onExiting={[Function]}
          timeout={500}
          unmountOnExit={false}
        >
          [Function]
        </Transition>,
        <Modal
          centered={true}
          className="feedback-modal-container"
          closeOnDimmerClick={true}
          closeOnDocumentClick={false}
          dimmer={true}
          eventPool="Modal"
          onClose={[Function]}
          open={false}
          size="small"
        >
          <Header
            content="Search NEU Feedback"
            icon="mail"
          />
          <ModalContent
            className="formModalContent"
          >
            <Form
              as="form"
            >
              <div
                className="feedbackParagraph"
              >
                Thanks for your interest! We'd love to have more people help out with the project. There's a lot of CS stuff (new features, etc) and non-CS stuff (posters, marketing, outreach, etc) that we could work on, so it is no problem at all if you don't have a lot of experience in CS! Everything is flexible, and we could help you learn some programming along the way if you want to work on the site 🙂. Leave your name and some way we can get in contact (Facebook, email, Fortnite username, etc) and someone will reach out!
              </div>
              <TextArea
                as="textarea"
                className="feedbackTextbox"
                form="feedbackForm"
                name="response"
                onChange={[Function]}
                rows={3}
              />
            </Form>
          </ModalContent>
          <ModalActions>
            <Button
              as="button"
              basic={true}
              color="red"
              onClick={[Function]}
              role="button"
            >
              <Icon
                as="i"
                name="remove"
              />
              Cancel
            </Button>
            <Button
              as="button"
              color="green"
              form="feedbackForm"
              onClick={[Function]}
              role="button"
              type="submit"
            >
              <Icon
                as="i"
                name="checkmark"
              />
              Submit
            </Button>
          </ModalActions>
        </Modal>,
      ],
      "className": "feedback-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "appear": false,
          "children": [Function],
          "enter": true,
          "exit": true,
          "in": false,
          "mountOnEnter": false,
          "onEnter": [Function],
          "onEntered": [Function],
          "onEntering": [Function],
          "onExit": [Function],
          "onExited": [Function],
          "onExiting": [Function],
          "timeout": 500,
          "unmountOnExit": false,
        },
        "ref": null,
        "rendered": [Function],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "centered": true,
          "children": Array [
            <Header
              content="Search NEU Feedback"
              icon="mail"
            />,
            <ModalContent
              className="formModalContent"
            >
              <Form
                as="form"
              >
                <div
                  className="feedbackParagraph"
                >
                  Thanks for your interest! We'd love to have more people help out with the project. There's a lot of CS stuff (new features, etc) and non-CS stuff (posters, marketing, outreach, etc) that we could work on, so it is no problem at all if you don't have a lot of experience in CS! Everything is flexible, and we could help you learn some programming along the way if you want to work on the site 🙂. Leave your name and some way we can get in contact (Facebook, email, Fortnite username, etc) and someone will reach out!
                </div>
                <TextArea
                  as="textarea"
                  className="feedbackTextbox"
                  form="feedbackForm"
                  name="response"
                  onChange={[Function]}
                  rows={3}
                />
              </Form>
            </ModalContent>,
            <ModalActions>
              <Button
                as="button"
                basic={true}
                color="red"
                onClick={[Function]}
                role="button"
              >
                <Icon
                  as="i"
                  name="remove"
                />
                Cancel
              </Button>
              <Button
                as="button"
                color="green"
                form="feedbackForm"
                onClick={[Function]}
                role="button"
                type="submit"
              >
                <Icon
                  as="i"
                  name="checkmark"
                />
                Submit
              </Button>
            </ModalActions>,
          ],
          "className": "feedback-modal-container",
          "closeOnDimmerClick": true,
          "closeOnDocumentClick": false,
          "dimmer": true,
          "eventPool": "Modal",
          "onClose": [Function],
          "open": false,
          "size": "small",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "content": "Search NEU Feedback",
              "icon": "mail",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <Form
                as="form"
              >
                <div
                  className="feedbackParagraph"
                >
                  Thanks for your interest! We'd love to have more people help out with the project. There's a lot of CS stuff (new features, etc) and non-CS stuff (posters, marketing, outreach, etc) that we could work on, so it is no problem at all if you don't have a lot of experience in CS! Everything is flexible, and we could help you learn some programming along the way if you want to work on the site 🙂. Leave your name and some way we can get in contact (Facebook, email, Fortnite username, etc) and someone will reach out!
                </div>
                <TextArea
                  as="textarea"
                  className="feedbackTextbox"
                  form="feedbackForm"
                  name="response"
                  onChange={[Function]}
                  rows={3}
                />
              </Form>,
              "className": "formModalContent",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "as": "form",
                "children": Array [
                  <div
                    className="feedbackParagraph"
                  >
                    Thanks for your interest! We'd love to have more people help out with the project. There's a lot of CS stuff (new features, etc) and non-CS stuff (posters, marketing, outreach, etc) that we could work on, so it is no problem at all if you don't have a lot of experience in CS! Everything is flexible, and we could help you learn some programming along the way if you want to work on the site 🙂. Leave your name and some way we can get in contact (Facebook, email, Fortnite username, etc) and someone will reach out!
                  </div>,
                  <TextArea
                    as="textarea"
                    className="feedbackTextbox"
                    form="feedbackForm"
                    name="response"
                    onChange={[Function]}
                    rows={3}
                  />,
                  undefined,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Thanks for your interest! We'd love to have more people help out with the project. There's a lot of CS stuff (new features, etc) and non-CS stuff (posters, marketing, outreach, etc) that we could work on, so it is no problem at all if you don't have a lot of experience in CS! Everything is flexible, and we could help you learn some programming along the way if you want to work on the site 🙂. Leave your name and some way we can get in contact (Facebook, email, Fortnite username, etc) and someone will reach out!",
                    "className": "feedbackParagraph",
                  },
                  "ref": null,
                  "rendered": "Thanks for your interest! We'd love to have more people help out with the project. There's a lot of CS stuff (new features, etc) and non-CS stuff (posters, marketing, outreach, etc) that we could work on, so it is no problem at all if you don't have a lot of experience in CS! Everything is flexible, and we could help you learn some programming along the way if you want to work on the site 🙂. Leave your name and some way we can get in contact (Facebook, email, Fortnite username, etc) and someone will reach out!",
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "as": "textarea",
                    "className": "feedbackTextbox",
                    "form": "feedbackForm",
                    "name": "response",
                    "onChange": [Function],
                    "rows": 3,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                undefined,
              ],
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Button
                  as="button"
                  basic={true}
                  color="red"
                  onClick={[Function]}
                  role="button"
                >
                  <Icon
                    as="i"
                    name="remove"
                  />
                  Cancel
                </Button>,
                <Button
                  as="button"
                  color="green"
                  form="feedbackForm"
                  onClick={[Function]}
                  role="button"
                  type="submit"
                >
                  <Icon
                    as="i"
                    name="checkmark"
                  />
                  Submit
                </Button>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "as": "button",
                  "basic": true,
                  "children": Array [
                    <Icon
                      as="i"
                      name="remove"
                    />,
                    "Cancel",
                  ],
                  "color": "red",
                  "onClick": [Function],
                  "role": "button",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "as": "i",
                      "name": "remove",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "Cancel",
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "as": "button",
                  "children": Array [
                    <Icon
                      as="i"
                      name="checkmark"
                    />,
                    "Submit",
                  ],
                  "color": "green",
                  "form": "feedbackForm",
                  "onClick": [Function],
                  "role": "button",
                  "type": "submit",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "as": "i",
                      "name": "checkmark",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "Submit",
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Transition
            appear={false}
            enter={true}
            exit={true}
            in={false}
            mountOnEnter={false}
            onEnter={[Function]}
            onEntered={[Function]}
            onEntering={[Function]}
            onExit={[Function]}
            onExited={[Function]}
            onExiting={[Function]}
            timeout={500}
            unmountOnExit={false}
          >
            [Function]
          </Transition>,
          <Modal
            centered={true}
            className="feedback-modal-container"
            closeOnDimmerClick={true}
            closeOnDocumentClick={false}
            dimmer={true}
            eventPool="Modal"
            onClose={[Function]}
            open={false}
            size="small"
          >
            <Header
              content="Search NEU Feedback"
              icon="mail"
            />
            <ModalContent
              className="formModalContent"
            >
              <Form
                as="form"
              >
                <div
                  className="feedbackParagraph"
                >
                  Thanks for your interest! We'd love to have more people help out with the project. There's a lot of CS stuff (new features, etc) and non-CS stuff (posters, marketing, outreach, etc) that we could work on, so it is no problem at all if you don't have a lot of experience in CS! Everything is flexible, and we could help you learn some programming along the way if you want to work on the site 🙂. Leave your name and some way we can get in contact (Facebook, email, Fortnite username, etc) and someone will reach out!
                </div>
                <TextArea
                  as="textarea"
                  className="feedbackTextbox"
                  form="feedbackForm"
                  name="response"
                  onChange={[Function]}
                  rows={3}
                />
              </Form>
            </ModalContent>
            <ModalActions>
              <Button
                as="button"
                basic={true}
                color="red"
                onClick={[Function]}
                role="button"
              >
                <Icon
                  as="i"
                  name="remove"
                />
                Cancel
              </Button>
              <Button
                as="button"
                color="green"
                form="feedbackForm"
                onClick={[Function]}
                role="button"
                type="submit"
              >
                <Icon
                  as="i"
                  name="checkmark"
                />
                Submit
              </Button>
            </ModalActions>
          </Modal>,
        ],
        "className": "feedback-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "appear": false,
            "children": [Function],
            "enter": true,
            "exit": true,
            "in": false,
            "mountOnEnter": false,
            "onEnter": [Function],
            "onEntered": [Function],
            "onEntering": [Function],
            "onExit": [Function],
            "onExited": [Function],
            "onExiting": [Function],
            "timeout": 500,
            "unmountOnExit": false,
          },
          "ref": null,
          "rendered": [Function],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "centered": true,
            "children": Array [
              <Header
                content="Search NEU Feedback"
                icon="mail"
              />,
              <ModalContent
                className="formModalContent"
              >
                <Form
                  as="form"
                >
                  <div
                    className="feedbackParagraph"
                  >
                    Thanks for your interest! We'd love to have more people help out with the project. There's a lot of CS stuff (new features, etc) and non-CS stuff (posters, marketing, outreach, etc) that we could work on, so it is no problem at all if you don't have a lot of experience in CS! Everything is flexible, and we could help you learn some programming along the way if you want to work on the site 🙂. Leave your name and some way we can get in contact (Facebook, email, Fortnite username, etc) and someone will reach out!
                  </div>
                  <TextArea
                    as="textarea"
                    className="feedbackTextbox"
                    form="feedbackForm"
                    name="response"
                    onChange={[Function]}
                    rows={3}
                  />
                </Form>
              </ModalContent>,
              <ModalActions>
                <Button
                  as="button"
                  basic={true}
                  color="red"
                  onClick={[Function]}
                  role="button"
                >
                  <Icon
                    as="i"
                    name="remove"
                  />
                  Cancel
                </Button>
                <Button
                  as="button"
                  color="green"
                  form="feedbackForm"
                  onClick={[Function]}
                  role="button"
                  type="submit"
                >
                  <Icon
                    as="i"
                    name="checkmark"
                  />
                  Submit
                </Button>
              </ModalActions>,
            ],
            "className": "feedback-modal-container",
            "closeOnDimmerClick": true,
            "closeOnDocumentClick": false,
            "dimmer": true,
            "eventPool": "Modal",
            "onClose": [Function],
            "open": false,
            "size": "small",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "content": "Search NEU Feedback",
                "icon": "mail",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": <Form
                  as="form"
                >
                  <div
                    className="feedbackParagraph"
                  >
                    Thanks for your interest! We'd love to have more people help out with the project. There's a lot of CS stuff (new features, etc) and non-CS stuff (posters, marketing, outreach, etc) that we could work on, so it is no problem at all if you don't have a lot of experience in CS! Everything is flexible, and we could help you learn some programming along the way if you want to work on the site 🙂. Leave your name and some way we can get in contact (Facebook, email, Fortnite username, etc) and someone will reach out!
                  </div>
                  <TextArea
                    as="textarea"
                    className="feedbackTextbox"
                    form="feedbackForm"
                    name="response"
                    onChange={[Function]}
                    rows={3}
                  />
                </Form>,
                "className": "formModalContent",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "as": "form",
                  "children": Array [
                    <div
                      className="feedbackParagraph"
                    >
                      Thanks for your interest! We'd love to have more people help out with the project. There's a lot of CS stuff (new features, etc) and non-CS stuff (posters, marketing, outreach, etc) that we could work on, so it is no problem at all if you don't have a lot of experience in CS! Everything is flexible, and we could help you learn some programming along the way if you want to work on the site 🙂. Leave your name and some way we can get in contact (Facebook, email, Fortnite username, etc) and someone will reach out!
                    </div>,
                    <TextArea
                      as="textarea"
                      className="feedbackTextbox"
                      form="feedbackForm"
                      name="response"
                      onChange={[Function]}
                      rows={3}
                    />,
                    undefined,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Thanks for your interest! We'd love to have more people help out with the project. There's a lot of CS stuff (new features, etc) and non-CS stuff (posters, marketing, outreach, etc) that we could work on, so it is no problem at all if you don't have a lot of experience in CS! Everything is flexible, and we could help you learn some programming along the way if you want to work on the site 🙂. Leave your name and some way we can get in contact (Facebook, email, Fortnite username, etc) and someone will reach out!",
                      "className": "feedbackParagraph",
                    },
                    "ref": null,
                    "rendered": "Thanks for your interest! We'd love to have more people help out with the project. There's a lot of CS stuff (new features, etc) and non-CS stuff (posters, marketing, outreach, etc) that we could work on, so it is no problem at all if you don't have a lot of experience in CS! Everything is flexible, and we could help you learn some programming along the way if you want to work on the site 🙂. Leave your name and some way we can get in contact (Facebook, email, Fortnite username, etc) and someone will reach out!",
                    "type": "div",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "as": "textarea",
                      "className": "feedbackTextbox",
                      "form": "feedbackForm",
                      "name": "response",
                      "onChange": [Function],
                      "rows": 3,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  undefined,
                ],
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <Button
                    as="button"
                    basic={true}
                    color="red"
                    onClick={[Function]}
                    role="button"
                  >
                    <Icon
                      as="i"
                      name="remove"
                    />
                    Cancel
                  </Button>,
                  <Button
                    as="button"
                    color="green"
                    form="feedbackForm"
                    onClick={[Function]}
                    role="button"
                    type="submit"
                  >
                    <Icon
                      as="i"
                      name="checkmark"
                    />
                    Submit
                  </Button>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "as": "button",
                    "basic": true,
                    "children": Array [
                      <Icon
                        as="i"
                        name="remove"
                      />,
                      "Cancel",
                    ],
                    "color": "red",
                    "onClick": [Function],
                    "role": "button",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "as": "i",
                        "name": "remove",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "Cancel",
                  ],
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "as": "button",
                    "children": Array [
                      <Icon
                        as="i"
                        name="checkmark"
                      />,
                      "Submit",
                    ],
                    "color": "green",
                    "form": "feedbackForm",
                    "onClick": [Function],
                    "role": "button",
                    "type": "submit",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "as": "i",
                        "name": "checkmark",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "Submit",
                  ],
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`should render the form 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FeedbackModal
    closeForm={[Function]}
    feedbackModalOpen={true}
    isFeedback={false}
    isHelpOut={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Transition
          appear={false}
          enter={true}
          exit={true}
          in={false}
          mountOnEnter={false}
          onEnter={[Function]}
          onEntered={[Function]}
          onEntering={[Function]}
          onExit={[Function]}
          onExited={[Function]}
          onExiting={[Function]}
          timeout={500}
          unmountOnExit={false}
        >
          [Function]
        </Transition>,
        <Modal
          centered={true}
          className="feedback-modal-container"
          closeOnDimmerClick={true}
          closeOnDocumentClick={false}
          dimmer={true}
          eventPool="Modal"
          onClose={[Function]}
          open={true}
          size="small"
        >
          <Header
            content="Search NEU Feedback"
            icon="mail"
          />
          <ModalContent
            className="formModalContent"
          >
            <Form
              as="form"
            >
              <div
                className="feedbackParagraph"
              >
                Thanks for your interest! We'd love to have more people help out with the project. There's a lot of CS stuff (new features, etc) and non-CS stuff (posters, marketing, outreach, etc) that we could work on, so it is no problem at all if you don't have a lot of experience in CS! Everything is flexible, and we could help you learn some programming along the way if you want to work on the site 🙂. Leave your name and some way we can get in contact (Facebook, email, Fortnite username, etc) and someone will reach out!
              </div>
              <TextArea
                as="textarea"
                className="feedbackTextbox"
                form="feedbackForm"
                name="response"
                onChange={[Function]}
                rows={3}
              />
            </Form>
          </ModalContent>
          <ModalActions>
            <Button
              as="button"
              basic={true}
              color="red"
              onClick={[Function]}
              role="button"
            >
              <Icon
                as="i"
                name="remove"
              />
              Cancel
            </Button>
            <Button
              as="button"
              color="green"
              form="feedbackForm"
              onClick={[Function]}
              role="button"
              type="submit"
            >
              <Icon
                as="i"
                name="checkmark"
              />
              Submit
            </Button>
          </ModalActions>
        </Modal>,
      ],
      "className": "feedback-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "appear": false,
          "children": [Function],
          "enter": true,
          "exit": true,
          "in": false,
          "mountOnEnter": false,
          "onEnter": [Function],
          "onEntered": [Function],
          "onEntering": [Function],
          "onExit": [Function],
          "onExited": [Function],
          "onExiting": [Function],
          "timeout": 500,
          "unmountOnExit": false,
        },
        "ref": null,
        "rendered": [Function],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "centered": true,
          "children": Array [
            <Header
              content="Search NEU Feedback"
              icon="mail"
            />,
            <ModalContent
              className="formModalContent"
            >
              <Form
                as="form"
              >
                <div
                  className="feedbackParagraph"
                >
                  Thanks for your interest! We'd love to have more people help out with the project. There's a lot of CS stuff (new features, etc) and non-CS stuff (posters, marketing, outreach, etc) that we could work on, so it is no problem at all if you don't have a lot of experience in CS! Everything is flexible, and we could help you learn some programming along the way if you want to work on the site 🙂. Leave your name and some way we can get in contact (Facebook, email, Fortnite username, etc) and someone will reach out!
                </div>
                <TextArea
                  as="textarea"
                  className="feedbackTextbox"
                  form="feedbackForm"
                  name="response"
                  onChange={[Function]}
                  rows={3}
                />
              </Form>
            </ModalContent>,
            <ModalActions>
              <Button
                as="button"
                basic={true}
                color="red"
                onClick={[Function]}
                role="button"
              >
                <Icon
                  as="i"
                  name="remove"
                />
                Cancel
              </Button>
              <Button
                as="button"
                color="green"
                form="feedbackForm"
                onClick={[Function]}
                role="button"
                type="submit"
              >
                <Icon
                  as="i"
                  name="checkmark"
                />
                Submit
              </Button>
            </ModalActions>,
          ],
          "className": "feedback-modal-container",
          "closeOnDimmerClick": true,
          "closeOnDocumentClick": false,
          "dimmer": true,
          "eventPool": "Modal",
          "onClose": [Function],
          "open": true,
          "size": "small",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "content": "Search NEU Feedback",
              "icon": "mail",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <Form
                as="form"
              >
                <div
                  className="feedbackParagraph"
                >
                  Thanks for your interest! We'd love to have more people help out with the project. There's a lot of CS stuff (new features, etc) and non-CS stuff (posters, marketing, outreach, etc) that we could work on, so it is no problem at all if you don't have a lot of experience in CS! Everything is flexible, and we could help you learn some programming along the way if you want to work on the site 🙂. Leave your name and some way we can get in contact (Facebook, email, Fortnite username, etc) and someone will reach out!
                </div>
                <TextArea
                  as="textarea"
                  className="feedbackTextbox"
                  form="feedbackForm"
                  name="response"
                  onChange={[Function]}
                  rows={3}
                />
              </Form>,
              "className": "formModalContent",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "as": "form",
                "children": Array [
                  <div
                    className="feedbackParagraph"
                  >
                    Thanks for your interest! We'd love to have more people help out with the project. There's a lot of CS stuff (new features, etc) and non-CS stuff (posters, marketing, outreach, etc) that we could work on, so it is no problem at all if you don't have a lot of experience in CS! Everything is flexible, and we could help you learn some programming along the way if you want to work on the site 🙂. Leave your name and some way we can get in contact (Facebook, email, Fortnite username, etc) and someone will reach out!
                  </div>,
                  <TextArea
                    as="textarea"
                    className="feedbackTextbox"
                    form="feedbackForm"
                    name="response"
                    onChange={[Function]}
                    rows={3}
                  />,
                  undefined,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Thanks for your interest! We'd love to have more people help out with the project. There's a lot of CS stuff (new features, etc) and non-CS stuff (posters, marketing, outreach, etc) that we could work on, so it is no problem at all if you don't have a lot of experience in CS! Everything is flexible, and we could help you learn some programming along the way if you want to work on the site 🙂. Leave your name and some way we can get in contact (Facebook, email, Fortnite username, etc) and someone will reach out!",
                    "className": "feedbackParagraph",
                  },
                  "ref": null,
                  "rendered": "Thanks for your interest! We'd love to have more people help out with the project. There's a lot of CS stuff (new features, etc) and non-CS stuff (posters, marketing, outreach, etc) that we could work on, so it is no problem at all if you don't have a lot of experience in CS! Everything is flexible, and we could help you learn some programming along the way if you want to work on the site 🙂. Leave your name and some way we can get in contact (Facebook, email, Fortnite username, etc) and someone will reach out!",
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "as": "textarea",
                    "className": "feedbackTextbox",
                    "form": "feedbackForm",
                    "name": "response",
                    "onChange": [Function],
                    "rows": 3,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                undefined,
              ],
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Button
                  as="button"
                  basic={true}
                  color="red"
                  onClick={[Function]}
                  role="button"
                >
                  <Icon
                    as="i"
                    name="remove"
                  />
                  Cancel
                </Button>,
                <Button
                  as="button"
                  color="green"
                  form="feedbackForm"
                  onClick={[Function]}
                  role="button"
                  type="submit"
                >
                  <Icon
                    as="i"
                    name="checkmark"
                  />
                  Submit
                </Button>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "as": "button",
                  "basic": true,
                  "children": Array [
                    <Icon
                      as="i"
                      name="remove"
                    />,
                    "Cancel",
                  ],
                  "color": "red",
                  "onClick": [Function],
                  "role": "button",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "as": "i",
                      "name": "remove",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "Cancel",
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "as": "button",
                  "children": Array [
                    <Icon
                      as="i"
                      name="checkmark"
                    />,
                    "Submit",
                  ],
                  "color": "green",
                  "form": "feedbackForm",
                  "onClick": [Function],
                  "role": "button",
                  "type": "submit",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "as": "i",
                      "name": "checkmark",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "Submit",
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Transition
            appear={false}
            enter={true}
            exit={true}
            in={false}
            mountOnEnter={false}
            onEnter={[Function]}
            onEntered={[Function]}
            onEntering={[Function]}
            onExit={[Function]}
            onExited={[Function]}
            onExiting={[Function]}
            timeout={500}
            unmountOnExit={false}
          >
            [Function]
          </Transition>,
          <Modal
            centered={true}
            className="feedback-modal-container"
            closeOnDimmerClick={true}
            closeOnDocumentClick={false}
            dimmer={true}
            eventPool="Modal"
            onClose={[Function]}
            open={true}
            size="small"
          >
            <Header
              content="Search NEU Feedback"
              icon="mail"
            />
            <ModalContent
              className="formModalContent"
            >
              <Form
                as="form"
              >
                <div
                  className="feedbackParagraph"
                >
                  Thanks for your interest! We'd love to have more people help out with the project. There's a lot of CS stuff (new features, etc) and non-CS stuff (posters, marketing, outreach, etc) that we could work on, so it is no problem at all if you don't have a lot of experience in CS! Everything is flexible, and we could help you learn some programming along the way if you want to work on the site 🙂. Leave your name and some way we can get in contact (Facebook, email, Fortnite username, etc) and someone will reach out!
                </div>
                <TextArea
                  as="textarea"
                  className="feedbackTextbox"
                  form="feedbackForm"
                  name="response"
                  onChange={[Function]}
                  rows={3}
                />
              </Form>
            </ModalContent>
            <ModalActions>
              <Button
                as="button"
                basic={true}
                color="red"
                onClick={[Function]}
                role="button"
              >
                <Icon
                  as="i"
                  name="remove"
                />
                Cancel
              </Button>
              <Button
                as="button"
                color="green"
                form="feedbackForm"
                onClick={[Function]}
                role="button"
                type="submit"
              >
                <Icon
                  as="i"
                  name="checkmark"
                />
                Submit
              </Button>
            </ModalActions>
          </Modal>,
        ],
        "className": "feedback-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "appear": false,
            "children": [Function],
            "enter": true,
            "exit": true,
            "in": false,
            "mountOnEnter": false,
            "onEnter": [Function],
            "onEntered": [Function],
            "onEntering": [Function],
            "onExit": [Function],
            "onExited": [Function],
            "onExiting": [Function],
            "timeout": 500,
            "unmountOnExit": false,
          },
          "ref": null,
          "rendered": [Function],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "centered": true,
            "children": Array [
              <Header
                content="Search NEU Feedback"
                icon="mail"
              />,
              <ModalContent
                className="formModalContent"
              >
                <Form
                  as="form"
                >
                  <div
                    className="feedbackParagraph"
                  >
                    Thanks for your interest! We'd love to have more people help out with the project. There's a lot of CS stuff (new features, etc) and non-CS stuff (posters, marketing, outreach, etc) that we could work on, so it is no problem at all if you don't have a lot of experience in CS! Everything is flexible, and we could help you learn some programming along the way if you want to work on the site 🙂. Leave your name and some way we can get in contact (Facebook, email, Fortnite username, etc) and someone will reach out!
                  </div>
                  <TextArea
                    as="textarea"
                    className="feedbackTextbox"
                    form="feedbackForm"
                    name="response"
                    onChange={[Function]}
                    rows={3}
                  />
                </Form>
              </ModalContent>,
              <ModalActions>
                <Button
                  as="button"
                  basic={true}
                  color="red"
                  onClick={[Function]}
                  role="button"
                >
                  <Icon
                    as="i"
                    name="remove"
                  />
                  Cancel
                </Button>
                <Button
                  as="button"
                  color="green"
                  form="feedbackForm"
                  onClick={[Function]}
                  role="button"
                  type="submit"
                >
                  <Icon
                    as="i"
                    name="checkmark"
                  />
                  Submit
                </Button>
              </ModalActions>,
            ],
            "className": "feedback-modal-container",
            "closeOnDimmerClick": true,
            "closeOnDocumentClick": false,
            "dimmer": true,
            "eventPool": "Modal",
            "onClose": [Function],
            "open": true,
            "size": "small",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "content": "Search NEU Feedback",
                "icon": "mail",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": <Form
                  as="form"
                >
                  <div
                    className="feedbackParagraph"
                  >
                    Thanks for your interest! We'd love to have more people help out with the project. There's a lot of CS stuff (new features, etc) and non-CS stuff (posters, marketing, outreach, etc) that we could work on, so it is no problem at all if you don't have a lot of experience in CS! Everything is flexible, and we could help you learn some programming along the way if you want to work on the site 🙂. Leave your name and some way we can get in contact (Facebook, email, Fortnite username, etc) and someone will reach out!
                  </div>
                  <TextArea
                    as="textarea"
                    className="feedbackTextbox"
                    form="feedbackForm"
                    name="response"
                    onChange={[Function]}
                    rows={3}
                  />
                </Form>,
                "className": "formModalContent",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "as": "form",
                  "children": Array [
                    <div
                      className="feedbackParagraph"
                    >
                      Thanks for your interest! We'd love to have more people help out with the project. There's a lot of CS stuff (new features, etc) and non-CS stuff (posters, marketing, outreach, etc) that we could work on, so it is no problem at all if you don't have a lot of experience in CS! Everything is flexible, and we could help you learn some programming along the way if you want to work on the site 🙂. Leave your name and some way we can get in contact (Facebook, email, Fortnite username, etc) and someone will reach out!
                    </div>,
                    <TextArea
                      as="textarea"
                      className="feedbackTextbox"
                      form="feedbackForm"
                      name="response"
                      onChange={[Function]}
                      rows={3}
                    />,
                    undefined,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Thanks for your interest! We'd love to have more people help out with the project. There's a lot of CS stuff (new features, etc) and non-CS stuff (posters, marketing, outreach, etc) that we could work on, so it is no problem at all if you don't have a lot of experience in CS! Everything is flexible, and we could help you learn some programming along the way if you want to work on the site 🙂. Leave your name and some way we can get in contact (Facebook, email, Fortnite username, etc) and someone will reach out!",
                      "className": "feedbackParagraph",
                    },
                    "ref": null,
                    "rendered": "Thanks for your interest! We'd love to have more people help out with the project. There's a lot of CS stuff (new features, etc) and non-CS stuff (posters, marketing, outreach, etc) that we could work on, so it is no problem at all if you don't have a lot of experience in CS! Everything is flexible, and we could help you learn some programming along the way if you want to work on the site 🙂. Leave your name and some way we can get in contact (Facebook, email, Fortnite username, etc) and someone will reach out!",
                    "type": "div",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "as": "textarea",
                      "className": "feedbackTextbox",
                      "form": "feedbackForm",
                      "name": "response",
                      "onChange": [Function],
                      "rows": 3,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  undefined,
                ],
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <Button
                    as="button"
                    basic={true}
                    color="red"
                    onClick={[Function]}
                    role="button"
                  >
                    <Icon
                      as="i"
                      name="remove"
                    />
                    Cancel
                  </Button>,
                  <Button
                    as="button"
                    color="green"
                    form="feedbackForm"
                    onClick={[Function]}
                    role="button"
                    type="submit"
                  >
                    <Icon
                      as="i"
                      name="checkmark"
                    />
                    Submit
                  </Button>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "as": "button",
                    "basic": true,
                    "children": Array [
                      <Icon
                        as="i"
                        name="remove"
                      />,
                      "Cancel",
                    ],
                    "color": "red",
                    "onClick": [Function],
                    "role": "button",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "as": "i",
                        "name": "remove",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "Cancel",
                  ],
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "as": "button",
                    "children": Array [
                      <Icon
                        as="i"
                        name="checkmark"
                      />,
                      "Submit",
                    ],
                    "color": "green",
                    "form": "feedbackForm",
                    "onClick": [Function],
                    "role": "button",
                    "type": "submit",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "as": "i",
                        "name": "checkmark",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "Submit",
                  ],
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
